dev/deploy-voteback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-back
  namespace: vote-app
  labels:
    app: vote-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vote-back
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: vote-back
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: redis
          image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: votelab
              mountPath: /bitnami/redis/data
      volumes:
        - name: votelab
          persistentVolumeClaim:
            claimName: pvc-votelab
