dev/deploy-votefront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-front
  namespace: vote-app
  labels:
    app: vote-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-front
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: vote-front
    spec:
      containers:
        - name: vote-front
          image: bitchecker007/vote-front:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
