dev/svc-votefront.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-front
  namespace: vote-app
  labels:
    app: vote-front
spec:
  selector:
    app: vote-front
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 32080
  type: NodePort
