dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-front-ingress
  namespace: vote-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: vote.example.com
      http:
        paths:
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: vote-front
                port:
                  number: 80
